#56 Test changed
What: used objectmapper instead to make tests

Why: to convert JSON to object